force-app/main/default/objects/MessageLog__c/MessageLog__c.object-meta.xml
<CustomObject>
    <description>custom object to store inbound and outbound chat messages</description>
    <label>MessageLog</label>
    <nameField>
        <label>MessageLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MessageLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>