force-app/main/default/objects/MessageLog__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>field to store the inbound and outbound messgaes.</description>
    <label>Message</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>