force-app/main/default/objects/MessageLog__c/fields/MessageType__c.field-meta.xml
<CustomField>
    <fullName>MessageType__c</fullName>
    <description>field to determine the message</description>
    <label>MessageType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>