force-app/main/default/objects/MessageLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>to which user the message is</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MessageLogs</relationshipName>
    <type>Lookup</type>
</CustomField>